--- a/src/Register.css
+++ b/src/Register.css
@@ -214,9 +214,10 @@ font-weight: 600;
 #signInDiv{
   display: flex;
   justify-content: center;
+  align-items: center;
   max-width: 100%;
   min-width:  100%;
- border: 1px solid blue;
+
   border-radius: 5px;
 
 }
