--- a/src/Modal.css
+++ b/src/Modal.css
@@ -25,6 +25,10 @@
   max-width: 400px;
   height: 300px;
   border: 1px solid rgb(208, 208, 208);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-contentert p {
